qwikgame/static/css/qwik.css
/* ... */
/* Over-ride std checkbox */
input[type=checkbox] { display: none; }
label:has(input[type=checkbox])::before { content: ''; border: 1px solid var(--color-grey-c); color: #f3f3f3; display: inline-block; font-size: 1.8rem; height: 1.2rem; line-height: 1rem; margin: .2rem .4rem .2rem 0; text-align: center; vertical-align: middle; width: 1.2rem; }
label:has(input[type=checkbox]:checked)::before { color: var(--color-qwik); content: "\2714"; }

/* Over-ride std radio */
input[type=radio] { display: none; }
label:has(input[type=radio])::before { content: ''; border: 1px solid var(--color-grey-c); border-radius: 50%; color: #f3f3f3; display: inline-block; font-size: 2rem; height: 1.2rem; line-height: 1rem; margin: .2rem .4rem .2rem 0; text-align: center; width: 1.2rem; vertical-align: middle; }
label:has(input[type=radio]:checked)::before { content: "\2022"; color: var(--color-qwik); content: "\2714"; }

/* --- Buttons --- */
.btn { border: 1px solid; border-radius: var(--dim-ease); color: black; cursor: pointer; display: flex; flex-direction: row; font-weight: 550; gap: 0.3rem; justify-content: center; margin: 0.3rem; min-height: 3rem; padding: 1.25rem 1.5rem; text-decoration: none; text-overflow: ellipsis; }

/* hide custom checkbox/radio behaviour for label.btn (used extensively) */
label.btn:has(input[type=checkbox])::before { content: none; }
label.btn:has(input[type=radio])::before { content: none; }

/*.btn:focus { outline: 0.2rem solid #fffb00; }*/
.btn:active { box-shadow: inset 1px 2px 5px #777; transform: translateY(1px); }
.btn:active:has(input:disabled) { box-shadow: none; transform: none; }
.btn:has(input.hidden) { display: none }
.btn.primary { background-color: var(--color-qwik); border-color: var(--color-qwik); color: var(--color-grey-3); }
.btn.primary:active { background-color: var(--color-active-1); border-color: var(--color-active-1); }
.btn.primary:has(input:checked) { }
.btn.primary:has(input:disabled) { background-color: var(--color-disabled-bkg); border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); cursor: default; }
.btn.primary:disabled { background-color: var(--color-disabled-bkg); border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.secondary { border-color: var(--color-grey-3); color: var(--color-grey-3); }
.btn.secondary:active { border-color: var(--color-active-2) }
.btn.secondary:disabled { border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.secondary:has(input:checked) { background-color: var(--color-checked); border-color: var(--color-checked); box-shadow: inset 1px 2px 5px #777; transform: translateY(1px); }
.btn.secondary:has(input:disabled) { border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.tertiary { align-content: center; border-color: var(--color-backdrop); color: var(--color-blue); display: block; min-height: 2rem; padding: 0.3rem; text-decoration: underline; }
.btn.tertiary.menu { text-decoration: none; }
.btn.tertiary:active { background-color: var(--color-active-2); border-color: var(--color-active-2); }
.btn.tertiary:has(input:checked) { }
.btn.tertiary:has(input:disabled) { }
.btn.special1 { border-color: var(--color-qwik); color: var(--color-qwik); font-weight: bold; }
.btn.special1.mobile { border-radius: 50%; bottom: 4rem; height: 6rem; position: fixed; right: 2rem; width: 6rem; z-index: 10; }
.btn.special1:active { background-color: var(--color-active-1); border-color: var(--color-active-1); color: var(--color-stencil) }
.btn.special1:has(input:checked) { }
.btn.special1:has(input:disabled) { border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.special1:disabled { background-color: var(--color-disabled-bkg); border-color: var(--color-disabled-bdr); }
.btn.special2 { border-color: var(--color-backdrop); color: var(--color-grey-3); flex: 0 1 auto; margin: 0px; padding: 0.5rem 0.5rem; position: relative; text-decoration: none; }
.btn.special2:active { background-color: var(--color-active-2); border-color: var(--color-active-2); }
.btn.special2:has(i:only-child) { aspect-ratio: 1; flex: 0 0 auto; }
.btn.special2:has(input:checked) { background-color: var(--color-checked); border-color: var(--color-checked) }
.btn.special2:has(input:disabled) { border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.special2.selected { background-color: var(--color-checked); border-color: var(--color-checked); font-weight: bold; }
.btn.special2 .dot { aspect-ratio: 1; background-color: var(--color-blue); border-radius: 50%; justify-content: center; position: absolute; right: 0; top: 0; width: 1rem; }
.btn.special2 .identicon { height: 2.6rem; width: 2.6rem; }
@media (hover:hover) {
  .btn.primary:hover { background-color: var(--color-qwik-up); border-color: var(--color-qwik-up); }
  .btn.secondary:hover { background-color: var(--color-qwik-dn); border-color: var(--color-grey-3); }
  .btn.secondary:hover:has(input:disabled) { background-color: var(--color-disabled-bkg); }
  .btn.tertiary:hover { font-weight: bold; }
  .btn.special1:hover { background-color: var(--color-qwik); border-color: var(--color-qwik); color: var(--color-stencil) }
  .btn.special2:hover { background-color: var(--color-qwik-dn); border-color: var(--color-qwik-dn); }
}
.btn.auto { height: auto; width: 100%; }
.btn.hour { height: 3rem; width: 3rem; }
.btn.large { font-size: 1.13rem; }
.btn.loader { color: transparent; }
.btn.naked { border-width: 0; }
.btn.small { font-size: 0.88rem; width: 1rem; }
.btn.square { aspect-ratio: 1 / 1; }
.btn.thin { height: 2rem; margin: 0.1rem; padding: 0.3rem }
.btn.tiny { height: 1rem; padding: 0.8rem; min-height: 1rem; width: 1rem; }
.btn.replicate { background-color: var(--color-backdrop); border-radius: 50%; border-width: 0; color: var(--color-qwik); height: 3rem; padding: 0.3rem; width: 3rem; }
.btn.sml { height: 1.5rem; width: 1.5rem; }
a.btn { position: relative; }
/* ... */

